# waywallen

./: .gitignore  BUILD.md  CMakeLists.txt  Cargo.toml  README.CN.md  README.md  build.rs  deps.json  environment.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: appimage.yml
bridge/include/waywallen-bridge/: bridge.h  ipc_v1.h  pool.h  probe_vk.h  resolution.h
bridge/src/: bridge.c  ipc_v1.c  pool_egl_gbm.c  pool_vulkan.c  probe_vk.c  sync_release.c  sync_release.h
cmake/: FetchDeps.cmake  FetchDepsProvider.cmake
displays/dump-test/src/: main.rs
displays/layer-shell/src/: main.rs
libs/ffmpeg/: CMakeLists.txt
libs/ffmpeg/shaders/: nv12_to_rgba.comp
libs/ffmpeg/src/: video_decoder.cpp  video_decoder.hpp  vk_device.cpp  vk_device.hpp  yuv_to_rgba.cpp  yuv_to_rgba.hpp
plugins/: CMakeLists.txt
plugins/image/: CMakeLists.txt
plugins/image/renderers/: waywallen-image.toml
plugins/image/sources/: image.lua
plugins/image/src/: main.cpp
plugins/mpv/: CMakeLists.txt
plugins/mpv/src/: main.cpp
plugins/org.waywallen.image/: CMakeLists.txt  files.txt  image.lua  plugin.toml
plugins/org.waywallen.image/src/: av_image.cpp  av_image.hpp  main.cpp
plugins/org.waywallen.video/: CMakeLists.txt  files.txt  plugin.toml  video.lua
plugins/org.waywallen.video/src/: main.cpp
plugins/org.waywallen.wallhaven/: main.lua
plugins/org.waywallen.wallhaven/wallhaven/: api.lua  map.lua
plugins/video/: CMakeLists.txt
plugins/video/renderers/: waywallen-video.toml
plugins/video/sources/: video.lua
plugins/video/src/: av_video.cpp  av_video.hpp  main.cpp  vk_producer.cpp  vk_producer.hpp
proto/: control.proto  filter.proto
protocol/: waywallen_display_v1.xml  waywallen_ipc_v1.xml
scripts/: build_appimage.sh
src/: control.rs  control_proto.rs  dbus_iface.rs  display_endpoint.rs  error.rs  event_process.rs  events.rs  gpu.rs  lib.rs  main.rs  mpris.rs  renderer_manager.rs  scheduler.rs  session_monitor.rs  settings.rs  tasks.rs  wallpaper_properties.rs  wallpaper_sort.rs  wallpaper_type.rs  ws_server.rs
src/display/: endpoint.rs  layout.rs  spawner.rs
src/display/proto/: codec.rs  mod.rs
src/display_proto/: mod.rs
src/dma/: negotiate.rs
src/ipc/: mod.rs  proto.rs  uds.rs
src/model/: filter.rs  mod.rs  repo.rs  sync.rs
src/model/entities/: item.rs  item_tag.rs  library.rs  playlist_item.rs  source_plugin.rs  tag.rs
src/model/migration/: m20260502_000001_library_metadata.rs  m20260503_000001_init_v2.rs  m20260601_000001_playlists.rs  m20260614_000001_wallpaper_layout_override.rs  mod.rs
src/playlist/: repo.rs
src/plugin/: display_registry.rs  installer.rs  mod.rs  renderer_registry.rs  source_manager.rs
src/probe/: media.rs  stat.rs  task.rs
src/queue/: mod.rs  rotator.rs  state.rs
src/routing/: auto_replay.rs  autopause.rs  mod.rs  router.rs  table.rs
src/self_test/: display_consumer.rs  mod.rs  orchestrator.rs  peer.rs  proto.rs  report.rs  spawn.rs
src/self_test/tests/: fanout.rs  mod.rs  modifier_matrix.rs  render_loop.rs
src/self_test/vk/: cmd.rs  device.rs  image.rs  instance.rs  mod.rs  modifier.rs  sync.rs
src/sync/: drm_syncobj.rs  mod.rs  reaper.rs
src/tray/: dbusmenu.rs  mod.rs  sni.rs
src/wallpaper/: sort.rs  types.rs
tests/: display.rs  dmabuf_roundtrip_e2e.rs  ipc_renderer.rs  release_syncobj_e2e.rs
tests/common/: mod.rs
tools/wayproto-gen/src/: codegen_c.rs  codegen_rust.rs  lib.rs  main.rs  parser.rs
tools/wayproto-gen/tests/: c_compile.rs
ui/: CMakeLists.txt  deps.json
ui/assets/: waywallen-ui.metainfo.xml.in  waywallen-ui.releases.xml
ui/qml/: Window.qml
ui/qml/component/: ThumbnailImage.qml
ui/qml/component/filter/: AspectFilter.qml  BaseFilter.qml  EmptyFilter.qml  IntFilter.qml  StringFilter.qml  TagFilter.qml  WallpaperFilter.qml
ui/qml/component/settings/: PluginSettingsDialog.qml  PluginSettingsPopup.qml  SettingField.qml
ui/qml/dialog/: RemoteFilterDialog.qml  WallpaperFilterDialog.qml
ui/qml/page/: AboutPage.qml  AddLibraryPage.qml  DiscoverPage.qml  DisplaysPage.qml  PlaylistDetailPanel.qml  RemoteCard.qml  RemoteInfoPage.qml  SettingsPage.qml  StatusPage.qml  WallpaperCard.qml  WallpaperDetailPanel.qml  WallpaperPage.qml
ui/qml/page/wallpaper/: TweakSheet.qml  TweakState.qml
ui/src/: app.cpp  display.cpp  library.cpp  main.cpp  mod.cppm  notify.cpp  notify.cppm  proto.cppm  renderer.cpp  ui_settings.cpp  ui_settings.cppm  util.cpp  util.cppm
ui/src/model/: filter_rule_model.cpp  filter_rule_model.cppm  list_models.cpp  remote_model.cpp  remote_model.cppm  user_property_model.cpp  user_property_model.cppm
ui/src/objmodel/: display.cpp  display.cppm
ui/src/query/: display_query.cpp  display_query.cppm  mod.cppm  remote_query.cpp  remote_query.cppm  renderer_query.cpp  settings_query.cpp  settings_query.cppm  tag_query.cpp  tag_query.cppm  wallpaper_query.cpp  wallpaper_query.cppm
ui/src/thumb/: service.cpp  service.cppm
